Fix stretched images on product view page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,4 +69,5 @@ footer {
 /* Product View */
 .product-img {
     max-height: 400px;
+    object-fit: contain;
 }
